lupdate: warn when using relative location flag with non TS files

lupdate only supports relative paths for TS files. When non TS files
(e.g., XLIFF, PO, etc.) are used, lupdate silently ignores the relative
location flag, and generates absolute paths anyway.
Warn users when using non-TS files with relative location flag.

Fixes: QTBUG-80574
Change-Id: I5d987fd616ac22e2d61ff09be15e2a93d7fe2887
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>